# tr3_ROS

./: .gitignore  .gitmodules  README.md
src/end_tools/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/end_tools/ESP32_Blink/: tr3_temp.code-workspace
src/end_tools/ESP32_Blink/include/: Blink_control.h  Blink_v2.h  Electromagnet_bluetooth.h  Electromagnet_control.h
src/end_tools/ESP32_Blink/src/: Blink.cpp  Blink_v2.cpp  main.cpp
src/end_tools/ESP32_C3_magnet/: platformio.ini
src/end_tools/ESP32_C3_magnet/include/: RelayControl_BLE.h
src/end_tools/ESP32_C3_magnet/src/: main.cpp
src/end_tools/ESP32_C3_magnet/test/: test_RelayControl_BLE.py
src/end_tools/end_tools/magnet_bluetooth_esp32/: magnet_bluetooth_node.py
src/end_tools/launch/: magnet_bluetooth_esp32_launch.py
src/end_tools/platformIO/ESP32_Blink/: README.md  platformio.ini
src/end_tools/platformIO/ESP32_Blink/include/: Blink.h
src/end_tools/platformIO/ESP32_Blink/src/: Blink_control.cpp  Electromagnet_bluetooth.cpp  Electromagnet_control.cpp
src/end_tools/platformIO/ESP32_Blink/test/: Electromagnet_bluetooth_client.py
src/end_tools/platformIO/ESP32_C3_magnet/: README.md
src/end_tools/platformIO/ESP32_C3_magnet/include/: RelayControl.h
src/end_tools/platformIO/ESP32_C3_magnet/src/: RelayControl.cpp  RelayControl_BLE.cpp
